[package]
name = "bitcoin-varint"
version = "0.1.0"
edition = "2021"
authors = ["ethicnology", "Lola Rigaut-Luczak <me@laflemme.lol>"]
description = "Varint lib used in bitcoin and bitcoin-like p2p message protocol."
readme = "README.md"
repository = "https://github.com/cyber-coop/varint"
license = "GPL-3.0-only"
keywords = ["varint", "bitcoin", "dogecoin", "litecoin", "namecoin"]